<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_height="match_parent"
    tools:context=".FeedBackActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/topic"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:inputType="textEmailSubject"
        android:paddingHorizontal="16dp"
        android:hint="@string/topic_feedback"
        android:gravity="center|start"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFA"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/emial_feedback"
        android:gravity="center|start"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feedbackMsgFA"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:paddingHorizontal="16dp"
        android:hint="@string/feedback"
        android:gravity="center|start"/>

    <Button
        android:id="@+id/SendFeedBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:paddingHorizontal="16dp"

        android:textColor="@color/white"
        android:layout_gravity="center"/>
</LinearLayout>