<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/gradientfor_others"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/have_a_look_what_we_have_for_you"
                android:textColor="@color/grey"
                android:textSize="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">




                  <androidx.appcompat.widget.AppCompatButton
                       android:id="@+id/Fav_btn"
                      style="@style/Widget.AppCompat.Button.Borderless"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_margin="10dp"
                      android:background="@drawable/custome_liked_btn"
                      android:layout_weight="1"
                      android:contentDescription="@string/favourite_btn"
                      android:drawableStart="@drawable/fav_icon"
                      android:fontFamily="sans-serif-medium"
                      android:text="@string/liked_songs"
                      android:textColor="@color/white"
                      android:textAllCaps="false"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/playlist_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custome_liked_btn"
                    android:contentDescription="@string/playlist_btn"
                    android:drawableStart="@drawable/playlist_icon"
                    android:text="@string/library"
                    android:textColor="@color/white"
                    android:textAllCaps="false" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/shuffle_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custome_liked_btn"
                android:contentDescription="@string/shuffle_btn"
                android:textColor="@color/white"
                android:drawableStart="@drawable/shuffle_icon"
                android:text="@string/shuffle_btn"
                android:textAllCaps="false" />
            <TextView
                android:id="@+id/TotalSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/total_songs"
                android:textColor="@color/grey" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            android:name="com.example.saregamamusic.NowPlaying"
            tools:layout ="@layout/fragment_now_playing"/>
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--     this the navigation view which draws and shows the navigation drawer-->
<!--     include the menu created in the menu folder-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        />



</androidx.drawerlayout.widget.DrawerLayout>