<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="70dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:src="@drawable/music_icon"
        android:background="@color/darkgrey"
        app:shapeAppearanceOverlay="@style/curved"
        android:contentDescription="@string/song_img"/>

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="131dp"
        android:background="@color/black"
        android:contentDescription="@string/Playlist_name"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/Playlist_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/PLaylistDeleteBtn"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="5dp"
        android:background="@color/black"
        android:contentDescription="@string/song_name"
        android:src="@drawable/delete_icon"
        app:tint="#F30000" />


</com.google.android.material.card.MaterialCardView>