<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:background="@android:color/transparent"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/fav_icon"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/songNameMV"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_name"
        android:gravity="center_vertical"
        android:layout_toStartOf="@id/songDuration"
        android:layout_toEndOf="@+id/imageMV"
        android:singleLine="true"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/songAlbumMV"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/songAlbum"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:layout_toStartOf="@id/songDuration"
        android:layout_toEndOf="@+id/imageMV"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
       />

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="5dp"
        android:text="@string/start_tv"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>