<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/getstarted"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Splashscreen">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="350dp">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:textStyle="bold"
                            android:fontFamily="@font/imprima"
                            android:text="@string/enjoy_the"
                            android:textColor="@color/white"
                            android:textSize="50sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="50sp"
                            android:fontFamily="@font/imprima"

                            android:text="@string/best_music"
                            android:textColor="#FF0000"
                            android:textStyle="bold"
                            android:layout_marginStart="20dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="50sp"
                            android:fontFamily="@font/imprima"
                            android:text="@string/with_us"
                            android:textColor="@color/white"
                            android:layout_marginStart="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/getStarted"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginEnd="30dp"
                            android:background="@drawable/custom_btn"
                            android:text="@string/get_started"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <androidx.appcompat.widget.AppCompatButton

                            android:id="@+id/continueAsGuest"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="50dp"
                            android:backgroundTint="@android:color/transparent"
                            android:layout_marginEnd="30dp"
                            android:background="@drawable/custom_btn"
                            android:text="@string/continue_as_guest"
                            android:textColor="@color/white"
                            android:textSize="20sp" />


                </LinearLayout>




        </LinearLayout>



