<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientfor_others"
    tools:context=".PlaylistDetails">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/backbtnPD"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/PlaylistNamePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_btn"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:contentDescription="@string/playlist_btn"
            android:singleLine="true"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playListImgPD"
            android:layout_width="250dp"
            android:src="@drawable/play"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:background="@color/black"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails"
        app:layout_constraintStart_toEndOf="parent"
        android:paddingBottom="250dp"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleBtnPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/back_btn"
        app:icon="@drawable/shuffle_icon"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        app:strokeColor="@color/grey"
        app:strokeWidth="2dp"
        android:visibility="invisible"/>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UselessParent">


<!--            add button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/AddBtnPD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_song"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableLeft="@drawable/add_icon"
                android:text="@string/add_song"
                android:background="@color/darkgrey"
                android:textColor="@color/black"
                android:textAllCaps="false"
                />


       <!--remove button-->
           <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/RemoveAllPD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/darkgrey"
                android:contentDescription="@string/remove_All"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableLeft="@drawable/remove_icon"
                android:text="@string/remove_All"
                android:textColor="@color/black"
                android:textAllCaps="false"
                />

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>